blocks/form/form.css
/* ... */
main .file-wrapper .file-description button {
    --form-button-padding: 15px;

    width: 12px;
    height: 12px;
    border: none;
    text-align: center;
    background: var(--border-color);
    cursor: pointer;
    position: relative;
    border-radius: 3px;
}

main .file-wrapper .file-description button::after{
    content: 'X';
    position: absolute;
    top: 50%;
    left: 50%;
    color: var(--background-color-primary);
    transform: translate(-50%, -50%);
}

main .form .button-wrapper button {
    cursor:pointer;
    align-self: end;
    margin-bottom: 1rem;
}

main .form .button-wrapper button:hover {
    border: 3px solid #fff;
    color: #fff;
    background-color: var(--button-secondary-color);
}

main .form .button-wrapper button[disabled] {
    cursor:auto
}

main .form .button-wrapper button[disabled]:hover {
    border: 3px solid var(--button-secondary-color);
    color: var(--button-secondary-color);
    background-color: transparent;
}

/** Wizard Styling */
main .form form .wizard  {
  display: grid;
  counter-reset: wizard-step-counter;
  grid-template-columns: minmax(0, 1fr);
  border: var(--form-wizard-border) solid var(--form-wizard-border-color);
  background-color: var( --form-wizard-background-color);
  gap: unset;
  padding: 20px var(--form-wizard-padding);
}

main .form form .wizard > fieldset > legend{
    display: none;
}

main .form form .wizard > fieldset:not(.current-wizard-step){
    display: none;
}

main .form form .wizard .wizard-button-wrapper{
    display: flex;
    justify-content: end;
    gap: 50px;
    margin: var(--form-wizard-padding) 0;
    width: 100%;
    grid-column: span 12;
}

main .form form .wizard .wizard-button-wrapper .field-wrapper{
    flex: unset;
}

.wizard-menu-items{
    display: flex;
    gap: 50px;
    flex-wrap: wrap;
    list-style: none;
    padding: 0;
    margin: 0;
    font-weight: var(--form-fieldset-legend-font-weight);
    font-size: var(--form-fieldset-legend-font-size);
    color: var(--form-fieldset-legend-color);
    padding-bottom: var(--form-wizard-padding);
    grid-column: span 12;
}

main .form form .wizard .wizard-menu-item {
  counter-increment: wizard-step-counter;
}

main .form form .wizard .wizard-menu-item::before {
  content: counter(wizard-step-counter);
  border: 2px solid var(--form-wizard-number-color);
  color: var(--form-wizard-number-color);
  border-radius: 50%;
  width: 35px;
  height: 35px;
  margin-right: 10px;
  text-align: center;
  line-height: 2;
  display: inline-block;
}

main .form form .wizard .wizard-menu-active-item::before{
  border: 2px solid var(--form-wizard-number-color);
  background: var(--form-wizard-number-color);
  color: var(--background-color-primary);
  font-weight: 600;
}

@media (width >= 600px) {
    main .form button {
        width: unset;
    }
}

/* wizard title on left */
main .form form .wizard.left{
  display: flex;
}

main .form form .wizard.left .wizard-menu-items{
  flex-direction: column;
  width: 300px;
}

main form .panel-wrapper {
  display: flex;
  padding: 0;
  flex-direction: column;
}

main .form form .panel-wrapper{
  display: grid;
  grid-template-columns: repeat(var(--form-columns), minmax(0, 1fr));
  gap: var(--form-field-vert-gap) var(--form-field-horz-gap);
}

main .form form .repeat-wrapper{
    display: grid;
    grid-template-columns: repeat(var(--form-columns), minmax(0, 1fr));
    gap: var(--form-field-vert-gap) var(--form-field-horz-gap);
    border: 2px solid var(--form-repeatable-border-color);
    padding: 0.75rem;
    box-sizing: border-box;
}

main .form form .wizard.left .panel-wrapper{
  flex: 1;
}

@media (width >= 1200px) {
    main .form form .form-textarea-wrapper,
    main .form form .file-wrapper,
    main .form form .panel-wrapper {
        flex: 1 0 100%;
    }

    main .form form .panel-wrapper {
        flex-flow: row wrap;
        gap: 10px 15px;
    }
}

main .form .form-message.success-message {
    color: #0f5132;
    background-color: #d1e7dd;
    border-color: #badbcc;
    flex: 100%;
    grid-column: span 12;
    padding: 10px;
}

main .form .form-message.error-message {
    color: #842029;
    background-color: #f8d7da;
    border-color: #f5c2c7;
    flex: 100%;
    grid-column: span 12;
    padding: 10px;
}

main .form .file-wrapper .file-drag-area {
  border: 1px dashed var(--border-color);
  border-radius: 5px;
  padding: 10px 5px;
  display: flex;
  flex-direction: column;
  gap: 20px;
  justify-content: center;
  align-items: center;
}

/* grid css */
main .form form .field-wrapper .field-description{
  grid-column: span 12;
}

main .form form .field-wrapper.col-12 {
    grid-column: span 12;
}

main .form form .field-wrapper.col-11 {
    grid-column: span 11;
}

main .form form .field-wrapper.col-10 {
  grid-column: span 10;
}

main .form form .field-wrapper.col-9 {
    grid-column: span 9;
}

main .form form .field-wrapper.col-8 {
    grid-column: span 8;
}

main .form form .field-wrapper.col-7 {
    grid-column: span 7;
}

main .form form .field-wrapper.col-6 {
      grid-column: span 6;
}

main .form form .field-wrapper.col-5 {
      grid-column: span 5;
}

main .form form .field-wrapper.col-4 {
      grid-column: span 4;
}

main .form form .field-wrapper.col-3 {
      grid-column: span 3;
}

main .form form .field-wrapper.col-2 {
      grid-column: span 2;
}

main .form form .field-wrapper.col-1 {
    grid-column: span 1;
}

main .form form .wizard > .field-description {
    width: 100%;
}
  
main .form form .checkbox-wrapper.field-invalid > .field-description {
      order: 1;
}

main form .wizard > .current-wizard-step.panel-wrapper:first-of-type ~ .wizard-button-wrapper > .wizard-button-prev,
main form .wizard > .current-wizard-step.panel-wrapper:last-of-type ~ .wizard-button-wrapper > .wizard-button-next {
    display: none;
}

main .form form:not(.edit-mode) .captcha-wrapper{
    display: none ;
}
/* ... */

